Add `genitals examined`
Fix #4

--- a/specification/animals-dwc-occurrence.yml
+++ b/specification/animals-dwc-occurrence.yml
@@ -344,6 +344,7 @@ identificationRemarks:
   empty: true
   allowed:
     - microscopic examination
+    - genitals examined
 
 taxonID:
   regex: 'https:\/\/waarnemingen\.be\/species\/(\d)+'
